--- a/src/main/resources/templates/seeCarInsuranceDetails.html
+++ b/src/main/resources/templates/seeCarInsuranceDetails.html
@@ -3,20 +3,31 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>SBM Home</title>
-	
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
+	<title>SBM</title>
+
+	<!-- Bootsrapt -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-		
-	<!-- Boxicons CSS -->
+	<!-- İcon -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-	
-	<link href="https://css.gg/css" rel="stylesheet" />
-	
-	<link rel="stylesheet" href="" th:href="@{/css/style.css}">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+	<!-- CSS -->
+	<link rel="stylesheet" th:href="@{/css/register.css}" href="src/main/resources/static/css/register.css">
+	<!-- Angularjs -->
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+	<!--	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"-->
+	<!--		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"-->
+	<!--		crossorigin="anonymous"></script>-->
+	<!--	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"-->
+	<!--		integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">	-->
+	<!--	<link href="https://css.gg/css" rel="stylesheet" />-->
+	<!--	<link rel="stylesheet" href="" th:href="@{/css/style.css}">-->
+
 	<style>
 		#icon-trash {
 			color: red;
@@ -45,134 +56,196 @@
 <body>
 	<!--Navbar-->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid px-5">
-          <a class="navbar-brand" href="#">Logo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-            <ul class="navbar-nav mb-2 mb-lg-0 text-center">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index">
-                    <i class='bx bxs-home'></i>
-                    Home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/#">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-          <div class="operations">
-            <a href="/login">
-                <i class='bx bxs-user-circle login-icon'></i>
-                Login
-            </a>
-            <a href="/customerRegister">
-                <i class='bx bxs-user-plus register-icon'></i>
-                Register
-            </a>
-          </div>
-        </div>
-      </nav>
+		<div class="container-fluid px-5">
+			<a class="navbar-brand" href="#">Logo</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+				<ul class="navbar-nav mb-2 mb-lg-0 text-center">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/index">
+							<i class='bx bxs-home'></i>
+							Home
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/index">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/#">Contact Us</a>
+					</li>
+				</ul>
+			</div>
+			<div class="operations">
+				<a href="/login">
+					<i class='bx bxs-user-circle login-icon'></i>
+					Login
+				</a>
+				<a href="/customerRegister">
+					<i class='bx bxs-user-plus register-icon'></i>
+					Register
+				</a>
+			</div>
+		</div>
+	</nav>
 	<!--	End Navbar-->
 
-	<div class="container list-page-main mt-4">
-		<div class="alert alert-warning" role="alert" th:if="${showText}"> An insurance for this car has already been
-			defined! </div>
-		<div class="alert alert-warning" role="alert" th:if="${showAlert}"> An insurance for this car has already been
-			deleted or expired! </div>
-		<div class="alert alert-warning" role="alert" th:if="${showAbsent}"> There is no insurance for this car! </div>
-		
-		<!-- Button to trigger the modal -->
-		<button type="button" class="btn btn-info text-white mb-2"
-			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;" data-bs-toggle="modal"
-			data-bs-target="#renewModal" id="renewButton">
-			<strong>Renew Car Insurance</strong>
-		</button>
+	<!--	<div class="container list-page-main mt-4">-->
+	<!--		<div class="alert alert-warning" role="alert" th:if="${showText}"> An insurance for this car has already been-->
+	<!--			defined! </div>-->
+	<!--		<div class="alert alert-warning" role="alert" th:if="${showAlert}"> An insurance for this car has already been-->
+	<!--			deleted or expired! </div>-->
+	<!--		<div class="alert alert-warning" role="alert" th:if="${showAbsent}"> There is no insurance for this car! </div>-->
 
-		<script th:inline="javascript">
-			document.addEventListener("DOMContentLoaded", function () {
-				var showAbsent = /*[[${showAbsent}]]*/ [];
-				var renewButton = document.getElementById("renewButton");
+	<!--		 Button to trigger the modal -->
+	<!--		<button type="button" class="btn btn-info text-white mb-2"-->
+	<!--			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;" data-bs-toggle="modal"-->
+	<!--			data-bs-target="#renewModal" id="renewButton">-->
+	<!--			<strong>Renew Car Insurance</strong>-->
+	<!--		</button>-->
 
-				if (showAbsent) {
-					renewButton.disabled = true; // Butonu tıklanamaz yapar
-				}
-			});
-		</script>
+	<!--		<script th:inline="javascript">-->
+	<!--			document.addEventListener("DOMContentLoaded", function () {-->
+	<!--				var showAbsent = /*[[${showAbsent}]]*/ [];-->
+	<!--				var renewButton = document.getElementById("renewButton");-->
+
+	<!--				if (showAbsent) {-->
+	<!--					renewButton.disabled = true; // Butonu tıklanamaz yapar-->
+	<!--				}-->
+	<!--			});-->
+	<!--		</script>-->
 
 
-		<!-- Renew Car Insurance Modal -->
-		<div class="modal fade" id="renewModal" tabindex="-1" aria-labelledby="renewModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="renewModalLabel">Renew Car Insurance</h5>
-						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
+	<!--		 Renew Car Insurance Modal -->
+	<!--		<div class="modal fade" id="renewModal" tabindex="-1" aria-labelledby="renewModalLabel" aria-hidden="true">-->
+	<!--			<div class="modal-dialog">-->
+	<!--				<div class="modal-content">-->
+	<!--					<div class="modal-header">-->
+	<!--						<h5 class="modal-title" id="renewModalLabel">Renew Car Insurance</h5>-->
+	<!--						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">-->
+	<!--							<span aria-hidden="true">&times;</span>-->
+	<!--						</button>-->
+	<!--					</div>-->
+	<!--					<div class="modal-body">-->
+	<!--						<form th:action="@{/renewCarInsurance/{insuranceId}(insuranceId=${insuranceId})}" method="post"-->
+	<!--							name="periodForm" novalidate>-->
+	<!--							<input type="hidden" name="insuranceId" th:value="${insuranceId}" />-->
+	<!--							<div class="d-flex justify-content-between mt-3">-->
+	<!--								<label style="margin-right: 20px;" for="period">Enter New Period:</label>-->
+	<!--								<input type="number" id="period" name="period" class="form-control"-->
+	<!--									placeholder="Period*" th:value="${period}" ng-required="true" min="0" max="100">-->
+	<!--							</div>-->
+	<!--														<p class="error" ng-show="periodForm.period.$invalid && periodForm.period.$touched">Fill out your period.</p>-->
+	<!--							<div class="modal-footer">-->
+	<!--								<button type="submit" class="btn modal-btn" ng-disabled="periodForm.$invalid">Save-->
+	<!--									Changes</button>-->
+	<!--							</div>-->
+	<!--						</form>-->
+	<!--					</div>-->
+	<!--				</div>-->
+	<!--			</div>-->
+	<!--		</div>-->
+	<div class="user-page-wrapper">
+		<div class="user-page-main" th:each="c :${customer}">
+			<div class="user-title">
+				<span class="username-text" th:text="${c.username}"></span>
+				<div class="select-type"><a th:href="@{/selectType(customerId=${c.customerId})}"><span
+							class="badge text-bg-primary">Get Insurance Quote</span></a></div>
+			</div>
+			<div class="user-page">
+				<!-- User Bilgileri -->
+				<div class="user-details">
+					<div class="card mb-4">
+						<div class="card-body text-center">
+							<img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp"
+								alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
+							<h5 class="my-3" th:text="${c.firstname}"></h5>
+							<table class="table">
+								<tbody>
+									<tr>
+										<th scope="row">First Name</th>
+										<td th:text="${c.firstname}"></td>
+									</tr>
+									<tr>
+										<th scope="row">Last Name</th>
+										<td th:text="${c.lastname}"></td>
+									</tr>
+									<tr>
+										<th scope="row">Phone Number</th>
+										<td th:text="${c.phoneNumber}"></td>
+									</tr>
+									<tr>
+										<th scope="row">Username</th>
+										<td th:text="${c.username}"></td>
+									</tr>
+									<tr>
+										<th scope="row">T.C.</th>
+										<td th:text="${c.tc}"></td>
+									</tr>
+									<tr>
+										<th scope="row">Email</th>
+										<td th:text="${c.email}"></td>
+									</tr>
+								</tbody>
+							</table>
+							<div class="user-settings mb-2">
+								<a type="button" class="btn btn-outline-info"
+									th:href="@{/editCustomer/{customerId}(customerId=${c.customerId})}">Edit</a>
+								<a type="button" class="btn btn-outline-danger ms-1"
+									th:href="@{/deleteCustomer/{customerId}(customerId=${c.customerId})}">Delete</a>
+							</div>
+						</div>
 					</div>
-					<div class="modal-body">
-						<form th:action="@{/renewCarInsurance/{insuranceId}(insuranceId=${insuranceId})}" method="post"
-							name="periodForm" novalidate>
-							<input type="hidden" name="insuranceId" th:value="${insuranceId}" />
-							<div class="d-flex justify-content-between mt-3">
-								<label style="margin-right: 20px;" for="period">Enter New Period:</label>
-								<input type="number" id="period" name="period" class="form-control"
-									placeholder="Period*" th:value="${period}" ng-required="true" min="0" max="100">
-							</div>
-														<p class="error" ng-show="periodForm.period.$invalid && periodForm.period.$touched">Fill out your period.</p>
-							<div class="modal-footer">
-								<button type="submit" class="btn modal-btn" ng-disabled="periodForm.$invalid">Save
-									Changes</button>
-							</div>
-						</form>
+				</div>
+
+				<!-- User Tablo -->
+				<div class="user-insurances">
+					<div class="card mb-4">
+						<table class="table">
+							<thead>
+								<tr>
+									<th scope="col">Insurance Id</th>
+									<th scope="col">Insurance Type</th>
+									<th scope="col">Customer Id</th>
+									<th scope="col">Car Id</th>
+									<th cope="col">Kdv</th>
+									<th cope="col">Offer</th>
+									<th cope="col">Result</th>
+									<th cope="col">Start Date</th>
+									<th scope="col">End Date</th>
+									<th scope="col">Period</th>
+									<th scope="col">Delete</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr th:each="i :${insurance}">
+									<td th:text="${i.insuranceId}"></td>
+									<td th:text="${i.insuranceType}"></td>
+									<td th:text="${i.customerId}"></td>
+									<td th:text="${i.carId}"></td>
+									<td th:text="${'% ' + i.kdv}"></td>
+									<td th:text="${i.offer}"></td>
+									<td th:text="${i.result}"></td>
+									<td th:text="${i.startDate}"></td>
+									<td th:text="${i.endDate}"></td>
+									<td th:text="${i.period}"></td>
+									<td><button id="trash" class="mx-auto"><a
+												th:href="@{/carInsuranceRefund/{id}(id=${i.insuranceId})}"><i
+													id="icon-trash" class="bx bx-trash"></i></a></button></td>
+								</tr>
+							</tbody>
+						</table>
 					</div>
 				</div>
 			</div>
 		</div>
-
-
-		<table class="table table-hover text-center">
-			<thead>
-				<tr>
-					<th scope="col">Insurance Id</th>
-					<th scope="col">Insurance Type</th>
-					<th scope="col">Customer Id</th>
-					<th scope="col">Car Id</th>
-					<th cope="col">Kdv</th>
-					<th cope="col">Offer</th>
-					<th cope="col">Result</th>
-					<th cope="col">Start Date</th>
-					<th scope="col">End Date</th>
-					<th scope="col">Period</th>
-					<th scope="col">Delete</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="i :${insurance}">
-					<td th:text="${i.insuranceId}"></td>
-					<td th:text="${i.insuranceType}"></td>
-					<td th:text="${i.customerId}"></td>
-					<td th:text="${i.carId}"></td>
-					<td th:text="${'% ' + i.kdv}"></td>
-					<td th:text="${i.offer}"></td>
-					<td th:text="${i.result}"></td>
-					<td th:text="${i.startDate}"></td>
-					<td th:text="${i.endDate}"></td>
-					<td th:text="${i.period}"></td>
-					<td><button id="trash" class="mx-auto"><a
-								th:href="@{/carInsuranceRefund/{id}(id=${i.insuranceId})}"><i id="icon-trash"
-									class="bx bx-trash"></i></a></button></td>
-				</tr>
-			</tbody>
-		</table>
 	</div>
 	</div>
+	</div>
+
 
 	<!-- Footer -->
 	<footer>
@@ -199,7 +272,7 @@
 				</div>
 				<div>
 					<h6 class="text-uppercase">Github</h6>
-					<p>https://github.com/edamuutlu</p>  
+					<p>https://github.com/edamuutlu</p>
 					<p>https://github.com/nuricanbrdmr</p>
 				</div>
 				<div>
