--- a/src/main/resources/templates/seeCarInsuranceDetails.html
+++ b/src/main/resources/templates/seeCarInsuranceDetails.html
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>SBM</title>
 
 	<!-- Bootsrapt -->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<link href="https://getbootstrap.com/docs/5.2/assets/css/docs.css" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<!-- İcon -->
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -76,83 +76,77 @@
 	</nav>
 	<!--	End Navbar-->
 
-	<!--	<div class="container list-page-main mt-4">-->
-	<!--		<div class="alert alert-warning" role="alert" th:if="${showText}"> An insurance for this car has already been-->
-	<!--			defined! </div>-->
-	<!--		<div class="alert alert-warning" role="alert" th:if="${showAlert}"> An insurance for this car has already been-->
-	<!--			deleted or expired! </div>-->
-	<!--		<div class="alert alert-warning" role="alert" th:if="${showAbsent}"> There is no insurance for this car! </div>-->
 
-	<!--		 Button to trigger the modal -->
-	<!--		<button type="button" class="btn btn-info text-white mb-2"-->
-	<!--			style="background-color: rgb(62, 209, 221); font-size: 17px; padding: 10px 20px;" data-bs-toggle="modal"-->
-	<!--			data-bs-target="#renewModal" id="renewButton">-->
-	<!--			<strong>Renew Car Insurance</strong>-->
-	<!--		</button>-->
+			<script th:inline="javascript">
+				document.addEventListener("DOMContentLoaded", function () {
+					var showAbsent = /*[[${showAbsent}]]*/ [];
+					var renewButton = document.getElementById("renewButton");
 
-	<!--		<script th:inline="javascript">-->
-	<!--			document.addEventListener("DOMContentLoaded", function () {-->
-	<!--				var showAbsent = /*[[${showAbsent}]]*/ [];-->
-	<!--				var renewButton = document.getElementById("renewButton");-->
-
-	<!--				if (showAbsent) {-->
-	<!--					renewButton.disabled = true; // Butonu tıklanamaz yapar-->
-	<!--				}-->
-	<!--			});-->
-	<!--		</script>-->
+					if (showAbsent) {
+						renewButton.disabled = true; // Butonu tıklanamaz yapar
+					}
+				});
+			</script>
 
 
-	<!--		 Renew Car Insurance Modal -->
-	<!--		<div class="modal fade" id="renewModal" tabindex="-1" aria-labelledby="renewModalLabel" aria-hidden="true">-->
-	<!--			<div class="modal-dialog">-->
-	<!--				<div class="modal-content">-->
-	<!--					<div class="modal-header">-->
-	<!--						<h5 class="modal-title" id="renewModalLabel">Renew Car Insurance</h5>-->
-	<!--						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">-->
-	<!--							<span aria-hidden="true">&times;</span>-->
-	<!--						</button>-->
-	<!--					</div>-->
-	<!--					<div class="modal-body">-->
-	<!--						<form th:action="@{/renewCarInsurance/{insuranceId}(insuranceId=${insuranceId})}" method="post"-->
-	<!--							name="periodForm" novalidate>-->
-	<!--							<input type="hidden" name="insuranceId" th:value="${insuranceId}" />-->
-	<!--							<div class="d-flex justify-content-between mt-3">-->
-	<!--								<label style="margin-right: 20px;" for="period">Enter New Period:</label>-->
-	<!--								<input type="number" id="period" name="period" class="form-control"-->
-	<!--									placeholder="Period*" th:value="${period}" ng-required="true" min="0" max="100">-->
-	<!--							</div>-->
-	<!--														<p class="error" ng-show="periodForm.period.$invalid && periodForm.period.$touched">Fill out your period.</p>-->
-	<!--							<div class="modal-footer">-->
-	<!--								<button type="submit" class="btn modal-btn" ng-disabled="periodForm.$invalid">Save-->
-	<!--									Changes</button>-->
-	<!--							</div>-->
-	<!--						</form>-->
-	<!--					</div>-->
-	<!--				</div>-->
-	<!--			</div>-->
-	<!--		</div>-->
+<!--			 Renew Car Insurance Modal -->
+			<div class="modal fade" id="renewModal" tabindex="-1" aria-labelledby="renewModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="renewModalLabel">Renew Car Insurance</h5>
+							<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body">
+							<form th:action="@{/renewCarInsurance/{insuranceId}(insuranceId=${insuranceId})}" method="post"
+								name="periodForm" novalidate>
+								<input type="hidden" name="insuranceId" th:value="${insuranceId}" />
+								<div class="d-flex justify-content-between mt-3">
+									<label style="margin-right: 20px;" for="period">Enter New Period:</label>
+									<input type="number" id="period" name="period" class="form-control"
+										placeholder="Period*" th:value="${period}" ng-required="true" min="0" max="100">
+								</div>
+															<p class="error" ng-show="periodForm.period.$invalid && periodForm.period.$touched">Fill out your period.</p>
+								<div class="modal-footer">
+									<button type="submit" class="btn modal-btn" ng-disabled="periodForm.$invalid">Save
+										Changes</button>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 	<div class="user-page-wrapper">
 		<div class="user-page-main" th:each="c :${customer}">
 			<div class="user-title">
-				<!--<span class="username-text" th:text="${c.username}"></span>
-				<div class="select-type"><a th:href="@{/selectType(customerId=${c.customerId})}"><span
-							class="badge text-bg-primary">Get Insurance Quote</span></a></div>-->
 				<div class="username-settings">
-	              <button onclick="goBack()"><span class="badge text-bg-secondary"><i class='bx bx-arrow-back'></i></span></button>
-	              <span class="username-text" th:text="${c.username}"></span>
-	            </div>
-	            <div class="select-type">
-	              <a href="#"><span class="badge text-bg-info">Insurance Renew</span></a>
-	            </div>
+					<button onclick="goBack()"><span class="badge text-bg-secondary"><i
+								class='bx bx-arrow-back'></i></span></button>
+					<span class="username-text" th:text="${c.username}"></span>
+				</div>
+<!--				<div class="select-type">-->
+<!--					<a href="#"><span class="badge text-bg-info">Renew Car Insurance</span></a>-->
+<!--				</div>-->
+				<!--		 Button to trigger the modal -->
+				<button type="button" class="select-type" data-bs-toggle="modal"
+					data-bs-target="#renewModal" id="renewButton">
+					<a class="badge text-bg-info">Renew Car Insurance</a>
+				</button>
 			</div>
-			<!--Alert Message-->
-			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert">
-          	  <i class='bx bxs-error' ></i>
-	          <div>
-	            An example warning alert with an icon
-	          </div>
-	        </div>
 			
+			<!--Alert Message-->
+			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert"
+				th:if="${showText} or ${showAlert} or ${showAbsent}">
+				<i class='bx bxs-error'></i>
+				<span th:if="${showText}"> An insurance for this car has already been defined! </span>
+				<span th:if="${showAlert}"> An insurance for this car has already been deleted or expired! </span>
+				<span th:if="${showAbsent}"> There is no insurance for this car!</span>
+			</div>
+
 			<div class="user-page">
 				<!-- User Bilgileri -->
 				<div class="user-details">
