--- a/src/main/resources/templates/seeCarInsuranceDetails.html
+++ b/src/main/resources/templates/seeCarInsuranceDetails.html
@@ -77,19 +77,28 @@
 	<!--	End Navbar-->
 
 
-			<script th:inline="javascript">
-				document.addEventListener("DOMContentLoaded", function () {
-					var showAbsent = /*[[${showAbsent}]]*/ [];
-					var renewButton = document.getElementById("renewButton");
+	<script th:inline="javascript">
+		document.addEventListener("DOMContentLoaded", function () {
+			var showAbsent = /*[[${showAbsent}]]*/[];
+			//var showText = /*[[${showText}]]*/ [];
+			//var showAlertMessage; 
+			alert("mesaj1" + showText);
+			var renewButton = document.getElementById("renewButton");
 
-					if (showAbsent) {
-						renewButton.disabled = true; // Butonu tıklanamaz yapar
-					}
-				});
-			</script>
+			if (showAbsent) {
+				renewButton.disabled = true; // Butonu tıklanamaz yapar
+			}
+
+			//if (!showText) {
+			//	showAlertMessage = true;
+			//}else{
+			//	showAlertMessage = false;
+			//}
+		});
+	</script>
 
 
-<!--			 Renew Car Insurance Modal -->
+	<!--			 Renew Car Insurance Modal -->
 			<div class="modal fade" id="renewModal" tabindex="-1" aria-labelledby="renewModalLabel" aria-hidden="true">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -128,16 +137,16 @@
 								class='bx bx-arrow-back'></i></span></button>
 					<span class="username-text" th:text="${c.username}"></span>
 				</div>
-<!--				<div class="select-type">-->
-<!--					<a href="#"><span class="badge text-bg-info">Renew Car Insurance</span></a>-->
-<!--				</div>-->
+				<!--				<div class="select-type">-->
+				<!--					<a href="#"><span class="badge text-bg-info">Renew Car Insurance</span></a>-->
+				<!--				</div>-->
 				<!--		 Button to trigger the modal -->
-				<button type="button" class="select-type" data-bs-toggle="modal"
-					data-bs-target="#renewModal" id="renewButton">
+				<button type="button" class="select-type" data-bs-toggle="modal" data-bs-target="#renewModal"
+					id="renewButton">
 					<a class="badge text-bg-info">Renew Car Insurance</a>
 				</button>
 			</div>
-			
+
 			<!--Alert Message-->
 			<div class="alert alert-warning insurance-error d-flex align-items-center" role="alert"
 				th:if="${showText} or ${showAlert} or ${showAbsent}">
